--- a/css/form.css
+++ b/css/form.css
@@ -38,7 +38,22 @@ nav a:hover {
 	color: palevioletred;
 }
 
-#joao, #maria, #pedro, #coord, #teste, #espaco1, #espaco2, #espaco3, #evento-update, #evento-remove, #evento-change, #evento-activate {
+.btns-widgets {
+	display: inline-block;
+}
+
+.lista-usuario {
+	width: 60px;
+	height: 30px;
+	margin-right: 5px;
+	border-radius: 10px;
+	text-align: center;
+	border: none;
+	
+}
+
+#joao, #maria, #pedro, #espaco1, #espaco2, #espaco3,
+#evento-update, #evento-remove, #evento-change, #evento-activate, #btn-newuser {
 	width: 150px;
 	height: 40px;
 	border: 0;
@@ -48,11 +63,21 @@ nav a:hover {
 	font-weight: bold;
 }
 
-#coord { background-color: black;}
+#joao, #maria, #pedro, #btn-newuser { 
+	margin-left: 7px;
+	margin-right: 7px;
+}
+
+#joao, #maria, #pedro, #btn-newuser:hover {
+	width: 170px;
+	height: 60px;
+}
+
+
+#btn-newuser { background-color: rgb(9, 59, 125);}
 #joao { background-color: darkorange;}
 #maria { background-color: darkred;}
 #pedro { background-color: darkgreen;}
-#teste	{ background-color: fuchsia;}
 
 .crop_espaco {
 	padding-left: 20px;
