--- a/css/funcoes.css
+++ b/css/funcoes.css
@@ -40,16 +40,17 @@ nav a:hover {
 
 .btns-widgets {
 	display: inline-block;
+	cursor: pointer;
 }
 
 .lista-usuario {
 	width: 60px;
 	height: 30px;
-	margin-right: 5px;
+	margin-right: 1px;
 	border-radius: 10px;
 	text-align: center;
 	border: none;
-	
+	cursor: pointer;
 }
 
 #btn-newuser {
@@ -72,26 +73,6 @@ nav a:hover {
 	transition: 0.4s;
 }
 
-#btn-removeuser {
-	width: 150px;
-	height: 40px;
-	border: 0;
-	border-radius: 10px;
-	cursor: pointer;
-	color: white;
-	font-weight: bold;
-	margin-left: 7px;
-	margin-right: 7px;
-	background-color: orangered;
-}
-
-#btn-removeuser:hover {
-	width: 160px;
-	height: 50px;
-	background-color: rgb(236, 14, 14);
-	transition: 0.4s;
-}
-
 .lista-pessoas {
 	padding: 20px;
 	font-size: 30px;
@@ -100,6 +81,7 @@ nav a:hover {
 	align-items: center;
     justify-content: center; 
 	color: black;
+	cursor: pointer;
 }
 
 #btn-excluir {
@@ -107,7 +89,15 @@ nav a:hover {
 	border: none;
 	border-radius: 3px;
 	color: black;
-	margin-right: 15px;
+	margin-right: 5px;
+	cursor: pointer;
 }
 
-
+#btn-editar {
+	background-color: rgb(6, 168, 255);
+	border: none;
+	border-radius: 3px;
+	color: black;
+	margin-right: 15px;
+	cursor: pointer;
+}
