--- a/css/funcoes.css
+++ b/css/funcoes.css
@@ -1,8 +1,14 @@
 .titulo_principal {
     padding: 20px;
+	padding-left: 200px;
     font-weight: bold;
     font-size: 30px;
 	color: black;
+	text-decoration: underline;
+}
+
+.jcp-instancia {
+	padding: 30px 30px 30px 90px;
 }
 
 .btns-widgets {
@@ -26,6 +32,20 @@
 	width: 160px;
 	height: 50px;
 	background-color: lightseagreen;
+	transition: 0.4s;
+}
+
+#btn-editUser:hover {
+	width: 160px;
+	height: 50px;
+	background-color: rgb(75, 182, 95);
+	transition: 0.4s;
+}
+
+#btn-delUser:hover {
+	width: 160px;
+	height: 50px;
+	background-color: rgb(202, 21, 21);
 	transition: 0.4s;
 }
 
