--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,36 @@
 body {
 	font-family: 'Montserrat', sans-serif;
+	background-color: #edededcc;
 	
 }
 
 header {
-	background:#3988d7;
+	background:#5a9fe4;
 	padding: 20px 0;
+}
+
+.elementos-cabecalho {
+	display: flex;
+	justify-content: flex-start;
+}
+
+.links-paginas {
+	display: flex;
+	justify-content: flex-start;
+	padding-top: 10px;
+	padding-left: 40px;
+}
+
+#logotipo {
+	width: 300px;
+	height: 35px;
 }
 
 .caixa {
 	position: relative;
 	width: 940px;
 	margin: 0 auto;
+	margin-left: 10px;
 }
 
 nav li {
@@ -24,9 +43,20 @@ nav a {
 	color: #ffffff;
 	font-weight: bold;
 	font-size: 22px;
-	text-decoration: none;
+	text-decoration: underline;
 }
 
 nav a:hover {
-	color: #a4a3a1;
+	color: #26263d;
+}
+
+footer {
+	background-color: #5a9fe4;
+	height: 50px;
+}
+
+.titulo_header{
+	font-size: medium;
+	font-weight: bolder;
+	text-align: center;
 }
