--- a/css/funcoes.css
+++ b/css/funcoes.css
@@ -77,6 +77,7 @@
 	border-color: rgb(35, 32, 32);
 	border: solid 2px;
 	cursor: pointer;
+	margin-left: 10px;
 }
 
 .label-user:hover {
@@ -86,5 +87,7 @@
 
 .radiobox-user {
 	margin-left: 15px;
-	background-color: blueviolet;
+	width: 20px;
+	height: 20px;
 }
+
