--- a/css/funcoes.css
+++ b/css/funcoes.css
@@ -1,3 +1,6 @@
+@import url(reset.css);
+@import url(style.css);
+
 .titulo_principal {
     padding: 20px;
 	padding-left: 200px;
@@ -23,7 +26,7 @@
 .btn-userOptions {
 	width: 150px;
 	height: 40px;
-	border: 0;
+	border: none;
 	border-radius: 10px;
 	cursor: pointer;
 	color: white;
@@ -31,25 +34,29 @@
 	margin-left: 7px;
 	margin-right: 7px;
 	background-color: rgb(9, 59, 125);
+	transition: 0.4s;
 }
 
 .fa-user, .fa-pen-to-square, .fa-trash-can{
 	padding-left: 10px;
 }
 
-.btn-userOptions:hover {
+#btn-addUser:hover {
 	background-color: lightseagreen;
-	transition: 0.4s;
+	width: 153px;
+	height: 43px;
 }
 
 #btn-editUser:hover {
 	background-color: rgb(75, 182, 95);
-	transition: 0.4s;
+	width: 153px;
+	height: 43px;
 }
 
 #btn-delUser:hover {
 	background-color: rgb(202, 21, 21);
-	transition: 0.4s;
+	width: 153px;
+	height: 43px;
 }
 
 .lista-pessoas {
@@ -72,11 +79,11 @@
 	border: solid 2px;
 	cursor: pointer;
 	margin-left: 10px;
+	transition: 0.2s;
 }
 
 .label-user:hover {
 	font-size: 20px;
-	transition: 0.2s;
 }
 
 .radiobox-user {
